--- a/web-site/Pages/Index.cshtml
+++ b/web-site/Pages/Index.cshtml
@@ -8,3 +8,10 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+@{
+    foreach (var item in Model.Users)
+    {
+        <div>@item.Id, @item.Name</div>
+    }
+}
